feat: list role
